--- a/www/assets/unicef.css
+++ b/www/assets/unicef.css
@@ -7,24 +7,24 @@
 	border-color: #007BCE;
 }
 
-.navbar-toggle {
+.navbar-inverse .navbar-toggle {
 	border-color: #49A8E7;
 }
 
-.navbar-brand {
-	color: #FFF;
+.navbar-inverse .navbar-brand {
+color: #fff;
 }
 
-.navbar-inverse .navbar-nav .active a, .navbar-nav .active a:hover, .navbar-nav .active a:focus {
+.navbar-inverse .navbar-nav>.active>a, .navbar-nav>.active>a:hover, .navbar-nav>.active>a:focus {
 	color: #fff;
 	background-color: #00ADFF;
 }
 
-.navbar-inverse .navbar-nav li a {
+.navbar-inverse .navbar-nav>li>a {
 	color: #fff;
 }
 
-.navbar-inverse .navbar-nav .open a:hover, .navbar-inverse .navbar-nav .open a:focus {
-color: #fff;
-background-color: #00adff;
+.navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
+	color: #fff;
+	background-color: #00adff;
 }
